updated package versions in requirements.txt, optimized docker compose file and added .csv file

--- a/movies_search.ipynb
+++ b/movies_search.ipynb
@@ -28,12 +28,12 @@
     "else:\n",
     "    # Setting up logging\n",
     "    logger = logging.getLogger(__name__)\n",
-    "    logger.setLevel(logging.DEBUG) # Debug and above level\n",
+    "    logger.setLevel(logging.DEBUG)  # Debug and above level\n",
     "\n",
-    "    formatter = logging.Formatter('%(asctime)s:%(levelname)s:%(message)s')\n",
+    "    formatter = logging.Formatter(\"%(asctime)s:%(levelname)s:%(message)s\")\n",
     "\n",
     "    # File handler\n",
-    "    file_handler = logging.FileHandler('error.logs')\n",
+    "    file_handler = logging.FileHandler(\"error.logs\")\n",
     "    file_handler.setLevel(logging.ERROR)\n",
     "    file_handler.setFormatter(formatter)\n",
     "    logger.addHandler(file_handler)\n",
@@ -62,8 +62,9 @@
     "try:\n",
     "    movies = pd.read_csv(os.path.join(data_dir, \"movies.csv\"), low_memory=False)\n",
     "except FileNotFoundError as fn:\n",
-    "    logger.error(f\"No file named \\'{os.path.basename(fn.filename)}\\'\"\n",
-    "          f\"can be found at \\'{data_dir}\\'\")"
+    "    logger.error(\n",
+    "        f\"No file named '{os.path.basename(fn.filename)}'\" f\"can be found at '{data_dir}'\"\n",
+    "    )"
    ]
   },
   {
@@ -141,14 +142,14 @@
     "# Visualising Empty values\n",
     "f, ax = plt.subplots(figsize=(10, 7))\n",
     "\n",
-    "colors = [\"black\", \"lightgrey\"] \n",
-    "cmap = LinearSegmentedColormap.from_list('Custom', colors, len(colors))\n",
+    "colors = [\"black\", \"lightgrey\"]\n",
+    "cmap = LinearSegmentedColormap.from_list(\"Custom\", colors, len(colors))\n",
     "\n",
-    "sns.heatmap(movies.isna(), yticklabels=False, cbar=True,cmap=cmap)\n",
+    "sns.heatmap(movies.isna(), yticklabels=False, cbar=True, cmap=cmap)\n",
     "\n",
     "colorbar = ax.collections[0].colorbar\n",
-    "colorbar.set_ticks([0.25,0.75])\n",
-    "colorbar.set_ticklabels(['Not Empty', 'Empty (or) missing'])"
+    "colorbar.set_ticks([0.25, 0.75])\n",
+    "colorbar.set_ticklabels([\"Not Empty\", \"Empty (or) missing\"])"
    ]
   },
   {
@@ -163,7 +164,7 @@
    "outputs": [],
    "source": [
     "# Dropping empty values from Country and language columns (we only use these columns)\n",
-    "movies.dropna(subset=['language', 'country'], how='any', inplace=True)"
+    "movies.dropna(subset=[\"language\", \"country\"], how=\"any\", inplace=True)"
    ]
   },
   {
@@ -179,8 +180,10 @@
    "source": [
     "# Stripping strings from year column and converting it to int\n",
     "try:\n",
-    "    movies['year'] = movies['year'].apply(lambda year: re.sub(r'\\D','',str(year))).astype(int)\n",
-    "    #movies['year'] = movies['year'].astype(int)\n",
+    "    movies[\"year\"] = (\n",
+    "        movies[\"year\"].apply(lambda year: re.sub(r\"\\D\", \"\", str(year))).astype(int)\n",
+    "    )\n",
+    "    # movies['year'] = movies['year'].astype(int)\n",
     "except Exception as e:\n",
     "    print(e)"
    ]
@@ -205,7 +208,7 @@
    ],
    "source": [
     "# Storing all unique genre in a list, with additional value, \"Any\"\n",
-    "genre = ['Any', *[genr for genr in movies['genre'].unique() if len(genr.split()) == 1]]\n",
+    "genre = [\"Any\", *[genr for genr in movies[\"genre\"].unique() if len(genr.split()) == 1]]\n",
     "genre.sort()\n",
     "logger.debug(genre)"
    ]
@@ -253,7 +256,7 @@
     }
    ],
    "source": [
-    "json_df = movies.to_dict('records')\n",
+    "json_df = movies.to_dict(\"records\")\n",
     "json_df[0]"
    ]
   },
@@ -312,15 +315,15 @@
     "    for record in data:\n",
     "        yield {\n",
     "            \"_index\": index,\n",
-    "            \"_id\": record['imdb_title_id'],\n",
+    "            \"_id\": record[\"imdb_title_id\"],\n",
     "            \"_source\": {\n",
-    "                \"title\": record['title'],\n",
-    "                \"releaseYear\": record['year'],\n",
-    "                \"language\": record['language'],\n",
-    "                \"genre\": record['genre'],\n",
-    "                \"country\": record['country'],\n",
-    "                \"score\": record['avg_vote']\n",
-    "            }\n",
+    "                \"title\": record[\"title\"],\n",
+    "                \"releaseYear\": record[\"year\"],\n",
+    "                \"language\": record[\"language\"],\n",
+    "                \"genre\": record[\"genre\"],\n",
+    "                \"country\": record[\"country\"],\n",
+    "                \"score\": record[\"avg_vote\"],\n",
+    "            },\n",
     "        }"
    ]
   },
@@ -387,66 +390,42 @@
     "setting = {\n",
     "    \"number_of_shards\": 1,\n",
     "    \"number_of_replicas\": 0,\n",
-    "    'analysis': {\n",
-    "        \n",
-    "        \"filter\":{\n",
-    "            \"title_synonym\": {\n",
-    "                \"type\": \"synonym\",\n",
-    "                \"synonyms\": [\n",
-    "                    \"inception => dream\"\n",
-    "                ]\n",
-    "            }\n",
+    "    \"analysis\": {\n",
+    "        \"filter\": {\n",
+    "            \"title_synonym\": {\"type\": \"synonym\", \"synonyms\": [\"inception => dream\"]}\n",
     "        },\n",
-    "        \n",
     "        \"tokenizer\": {\n",
     "            \"my_tokenizer\": {\n",
     "                \"type\": \"edge_ngram\",\n",
     "                \"min_gram\": 2,\n",
     "                \"max_gram\": 8,\n",
-    "                \"token_chars\": [\"letter\", \"digit\"]\n",
+    "                \"token_chars\": [\"letter\", \"digit\"],\n",
     "            }\n",
     "        },\n",
-    "        \n",
-    "        'analyzer': {\n",
-    "            'title_tokenizer': {\n",
-    "                'type': 'custom',\n",
-    "                'tokenizer': 'my_tokenizer',\n",
-    "                \"filter\": [\n",
-    "                    \"lowercase\",\n",
-    "                    \"title_synonym\"\n",
-    "                ]\n",
+    "        \"analyzer\": {\n",
+    "            \"title_tokenizer\": {\n",
+    "                \"type\": \"custom\",\n",
+    "                \"tokenizer\": \"my_tokenizer\",\n",
+    "                \"filter\": [\"lowercase\", \"title_synonym\"],\n",
     "            },\n",
-    "            \n",
     "        },\n",
-    "        \n",
-    "    }\n",
+    "    },\n",
     "}\n",
     "\n",
     "mapping = {\n",
     "    \"properties\": {\n",
-    "        \"releaseYear\": {\n",
-    "            \"type\": \"date\",\n",
-    "            \"format\": \"yyyy\"\n",
-    "        },\n",
-    "        \"title\": {\n",
-    "            \"type\": \"text\",\n",
-    "            \"analyzer\": \"title_tokenizer\"\n",
-    "        },\n",
-    "        \"genre\": {\n",
-    "            \"type\": \"text\",\n",
-    "            \"analyzer\": \"standard\"\n",
-    "        },\n",
-    "        \"score\": {\n",
-    "            \"type\": \"byte\"\n",
-    "        }\n",
+    "        \"releaseYear\": {\"type\": \"date\", \"format\": \"yyyy\"},\n",
+    "        \"title\": {\"type\": \"text\", \"analyzer\": \"title_tokenizer\"},\n",
+    "        \"genre\": {\"type\": \"text\", \"analyzer\": \"standard\"},\n",
+    "        \"score\": {\"type\": \"byte\"},\n",
     "    }\n",
     "}\n",
     "\n",
-    "#es.indices.delete(index=index, ignore=[400,404])\n",
+    "# es.indices.delete(index=index, ignore=[400,404])\n",
     "if not es.indices.exists(index=index):\n",
-    "    es.indices.create(index=index,settings=setting, mappings=mapping, ignore=400)\n",
-    "    helpers.bulk(es, es_format(json_df), ignore=[400,404])\n",
-    "else: # If index is present, then checking existing mappings\n",
+    "    es.indices.create(index=index, settings=setting, mappings=mapping, ignore=400)\n",
+    "    helpers.bulk(es, es_format(json_df), ignore=[400, 404])\n",
+    "else:  # If index is present, then checking existing mappings\n",
     "    print(json.dumps(es.indices.get_mapping(index=index), indent=2))"
    ]
   },
@@ -463,21 +442,17 @@
    "source": [
     "# Function to exicute search\n",
     "def search(movie_name, bool_body):\n",
-    "    querry_body = {\n",
-    "        \"bool\": bool_body\n",
-    "    }\n",
-    "    \n",
-    "    suggestion_body = {\n",
-    "        \"my_suggestion\": {\n",
-    "            \"text\": movie_name,\n",
-    "            \"term\": {\n",
-    "                \"field\": \"title\"\n",
-    "            }\n",
-    "        }\n",
-    "    }\n",
-    "    \n",
-    "    return es.search(index='movies_engine', query=querry_body, suggest=suggestion_body,\n",
-    "                     size=10, ignore=[400])"
+    "    querry_body = {\"bool\": bool_body}\n",
+    "\n",
+    "    suggestion_body = {\"my_suggestion\": {\"text\": movie_name, \"term\": {\"field\": \"title\"}}}\n",
+    "\n",
+    "    return es.search(\n",
+    "        index=\"movies_engine\",\n",
+    "        query=querry_body,\n",
+    "        suggest=suggestion_body,\n",
+    "        size=10,\n",
+    "        ignore=[400],\n",
+    "    )"
    ]
   },
   {
@@ -493,10 +468,18 @@
    "source": [
     "# Printing result of search in desired format\n",
     "def print_movies(data):\n",
-    "    print(\"{0:^40} | {1:^8} | {2:^8} | {3:^37} | {4:^30}\".format(\"Title\", \"Year\", \"Rating\", \"Genre\", \"Language\", \"Rating\"))\n",
-    "    print(\"-\"*130)\n",
-    "    for obj in data['hits']['hits']:\n",
-    "        print(\"{title:<40} | {releaseYear:^8} | {score:^8} | {genre:^37} | {language:^30}\".format(**obj['_source']))"
+    "    print(\n",
+    "        \"{0:^40} | {1:^8} | {2:^8} | {3:^37} | {4:^30}\".format(\n",
+    "            \"Title\", \"Year\", \"Rating\", \"Genre\", \"Language\", \"Rating\"\n",
+    "        )\n",
+    "    )\n",
+    "    print(\"-\" * 130)\n",
+    "    for obj in data[\"hits\"][\"hits\"]:\n",
+    "        print(\n",
+    "            \"{title:<40} | {releaseYear:^8} | {score:^8} | {genre:^37} | {language:^30}\".format(\n",
+    "                **obj[\"_source\"]\n",
+    "            )\n",
+    "        )"
    ]
   },
   {
@@ -511,41 +494,23 @@
    "outputs": [],
    "source": [
     "def filtered_movies(genre, rating, movie_name):\n",
-    "    #Boolean querry body\n",
+    "    # Boolean querry body\n",
     "    movie_filter = {\n",
-    "            \"must\": [\n",
-    "                {\n",
-    "                    \"match\": {\n",
-    "                        \"title\": {\n",
-    "                            \"query\": movie_name\n",
-    "                        }\n",
-    "                    }\n",
-    "                }\n",
-    "            ],\n",
-    "            \"filter\": [],\n",
-    "            \"should\": [\n",
-    "                {\n",
-    "                    \"match_phrase\": {\n",
-    "                        \"title\": {\n",
-    "                            \"query\": movie_name,\n",
-    "                            \"slop\": 2\n",
-    "                        }\n",
-    "                    }\n",
-    "                }\n",
-    "            ]\n",
-    "        }\n",
-    "    \n",
-    "    \n",
+    "        \"must\": [{\"match\": {\"title\": {\"query\": movie_name}}}],\n",
+    "        \"filter\": [],\n",
+    "        \"should\": [{\"match_phrase\": {\"title\": {\"query\": movie_name, \"slop\": 2}}}],\n",
+    "    }\n",
+    "\n",
     "    if len(movie_name) == 0:\n",
     "        print(\"Search something to see results\")\n",
     "    else:\n",
-    "        \n",
-    "        if genre != 'Any':\n",
-    "            movie_filter['filter'].append({\"match\": {\"genre\": genre}})\n",
-    "        \n",
+    "\n",
+    "        if genre != \"Any\":\n",
+    "            movie_filter[\"filter\"].append({\"match\": {\"genre\": genre}})\n",
+    "\n",
     "        if rating != 0:\n",
-    "            movie_filter['filter'].append({\"range\": {\"score\": { \"gte\": rating }}})\n",
-    "            \n",
+    "            movie_filter[\"filter\"].append({\"range\": {\"score\": {\"gte\": rating}}})\n",
+    "\n",
     "        result = search(movie_name, movie_filter)\n",
     "        print_movies(result)"
    ]
@@ -578,36 +543,13 @@
    "source": [
     "# selected_genre = widgets.Dropdown(options=genre, value='Any', description='Genre')\n",
     "# display(selected_genre)\n",
-    "interact(filtered_movies, \n",
-    "         genre=genre,\n",
-    "         rating=widgets.IntSlider(min=0, max=10, value=0, step=1), \n",
-    "         movie_name='',\n",
-    "        );"
+    "interact(\n",
+    "    filtered_movies,\n",
+    "    genre=genre,\n",
+    "    rating=widgets.IntSlider(min=0, max=10, value=0, step=1),\n",
+    "    movie_name=\"\",\n",
+    ");"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "956ab880",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17281eb7",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
